# ska-sdp-func-python

./: .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  pyproject.toml
docs/: requirements.txt
docs/src/: conf.py  dp3.rst  index.rst  usage.rst
src/ska_sdp_func_python/calibration/: chain_calibration.py  dp3_calibration.py  ionosphere_solvers.py  ionosphere_utils.py  operations.py  solver_utils.py  solvers.py
src/ska_sdp_func_python/fourier_transforms/: fft_coordinates.py
src/ska_sdp_func_python/image/: cleaners.py  deconvolution.py  gather_scatter.py
src/ska_sdp_func_python/imaging/: dft.py
src/ska_sdp_func_python/sky_component/: operations.py  taylor_terms.py
src/ska_sdp_func_python/sky_model/: skymodel_imaging.py
src/ska_sdp_func_python/util/: dp3_utils.py
src/ska_sdp_func_python/visibility/: operations.py
tests/calibration/: test_calibration_solvers.py  test_chain_calibration.py  test_dp3_calibration.py  test_ionosphere_solvers.py  test_ionosphere_utils.py
tests/image/: test_image_deconvolution.py  test_image_iterators.py
tests/imaging/: test_imaging.py  test_imaging_wg.py
tests/sky_model/: test_skymodel_imaging.py
tests/util/: test_geometry.py
tests/visibility/: test_visibility_operations.py
