[tool.poetry]
name = "ska-sdp-func-python"
version = "0.3.0"
description = "SKA SDP Python-Based Processing Functions"
authors = ["SKA SDP Developers"]
license = "Apache 2.0"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-func-python"
documentation = "https://developer.skao.int/projects/ska-telescope-ska-sdp-func-python/en/latest/"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
astroplan = "^0.9"
astropy = "^5.3"
ducc0 = ">=0.2.7"
numpy = "^1.25"
photutils = "^1.9"
scipy = "^1.11"
ska-sdp-datamodels = "^0.2.3"
xarray = "^2023.7.0"

# optional dependencies; used by "extras"
cupy = {version = "^12.2", optional = true}
pyfftw = {version = "^0.13", optional = true}
radler = {version = "^0.0.1", optional = true}
dp3 = {version = "6.0.0", optional = true}
h5py = {version = "^3.9", optional = true}
ska-sdp-func = { git = "https://gitlab.com/ska-telescope/sdp/ska-sdp-func.git", branch = "main", optional = true}

[tool.poetry.extras]
fft_support = ["pyfftw"]
gpu = ["cupy"]
radler = ["radler"]
dp3 = ["dp3"]
h5py = ["h5py"]
ska-sdp-func = ["ska-sdp-func"]

[tool.poetry.dev-dependencies]
black = "^23.7"
build = "^0.10"
flake8 = "^6.1"
isort = "^5.12"
pylint = "^2.17"
pytest = "^7.4"
pytest-cov = "^4.1"
pylint-junit = "^0.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
sphinx-rtd-theme = "^1.3"
sphinx-automodapi = "^0.16"

# Additional packages needed to be installed
# so that the docs can render the API correctly
# without the need of mocking every single import
scipy = "^1.11"
ska-sdp-datamodels = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
